# gt-agent

./: .env.example  .gitignore  GT_AGENT_Codex_Manual.md  README.md  README_GT_AGENT.md  pyproject.toml  start_gt_agent_ui.bat
.github/workflows/: ci.yml
config/: tools_config.yaml
gt_agent/: __init__.py  assumption_audit.py  attempt_summary.py  compiler.py  controller.py  gap_ledger.py  goal_cache.py  model_client.py  p_ucb_sampler.py  population_db.py  prompt_builder.py  prover_subagent.py  rater_subagent.py  research_service.py  run.py  search_replace.py  tool_config.py  validator.py  web_app.py
gt_agent/knowledge/: gt_domain_checklist.md
gt_agent/prompts/: gt_prover_system.md  gt_rater_system.md  gt_reflector.md
gt_agent/schemas/: __init__.py  gt_attempt_schema.py  gt_problem_schema.py
gt_agent/tools/: __init__.py  base.py  builtin.py  registry.py
gt_agent/web/: app.js  index.html  styles.css
tests/: test_gt_validator.py  test_model_and_research.py  test_tools_system.py
