[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-agent"
version = "0.1.0"
description = "Geometry/topology research agent with Lean-oriented validation."
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
packages = ["gt_agent"]

[tool.setuptools.package-data]
gt_agent = ["prompts/*.md", "knowledge/*.md", "web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
